feat: audit e logs end point and tests added
